--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "discrete-layer-storage",
+  "name": "export-request-storage",
   "version": "1.0.0",
   "description": "discrete layer db service",
   "main": "index.ts",
   "scripts": {
     "test:unit": "jest --coverage --testPathPattern=\"./src/tests/unit/.*.spec.ts\" --reporters='default' --reporters='jest-html-reporters' --watchAll=false",
     "test:integration": "jest --testPathPattern=\"./src/tests/integration/.*.spec.ts\"",
-    "lint": "eslint index.ts && eslint src/**",
+   "lint": "eslint --ignore-pattern \"src/migration\" \"src/**\" index.ts",
     "lint:fix": "eslint --fix src/**",
     "release": "standard-version",
     "test": "npm run lint && npm run test:unit && npm run test:integration",
