--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "export-request-storage",
   "version": "1.0.0",
-  "description": "discrete layer db service",
+  "description": "handle export statuses with a storage service",
   "main": "index.ts",
   "scripts": {
     "test:unit": "jest --coverage --testPathPattern=\"./src/tests/unit/.*.spec.ts\" --reporters='default' --reporters='jest-html-reporters' --watchAll=false",
