feat: ssl support added

--- a/confd/production.toml
+++ b/confd/production.toml
@@ -14,5 +14,9 @@ keys = [
     "/configuration/db/database",
     "/configuration/db/synchronize",
     "/configuration/db/logging",
+    "/configuration/db/ssl/reject_unauthorized",
+    "/configuration/db/ssl/ca",
+    "/configuration/db/ssl/key",
+    "/configuration/db/ssl/cert",
     "/configuration/search/default/page/size"
 ]
