--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
     "@map-colonies/eslint-config/jest",
     "@map-colonies/eslint-config/ts-base"
   ],
+  "ignorePatterns": ["**/*.js", "dist", "src/DAL/migration"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
