fix(migration): fixed migration

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "npm run build && node ./dist/index.js",
     "confd": "node ./confd/generate-config.js",
     "confd:prod": "node ./confd/generate-config.js --environment production",
-    "migration": "node ./src/migration/migration.js",
+    "migration:run": "node ./src/migration/run-migration.js",
+    "migration:create": "node ./src/migration/create-migration.js",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "directories": {
